# fajer

./: .gitmodules  CMakeLists.txt  README
data/: bdzium.flac  boing.flac  boom.flac  brum.flac  fajer.desktop  lose.flac  menu.flac  music.flac
data/icons/: fajer.icns  icon.rc
data/sprites/building/: fire.ini
data/sprites/ego/: walk.ini
data/sprites/human/: blank.ini  boom.ini
data/sprites/logo/: smoke.ini
src/: common.h
src/gamestates/: CMakeLists.txt  dosowisko.c  empty.c  exit.c  game.c  lose.c  menu.c  menu.h  win.c
